Add heartbeat
